--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html lang = "pt-br">
 <head>
     <meta charset = "UTF-8">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
     <title>Calculadora ENEM</title>
-    <script src="./script.js"></script>
 </head>
 <body>
-    <div class="imgdiv">
-        <img src="./logo-enem.png" alt="Logo do ENEM" title="Logo do ENEM">
-    </div>
+    <img class="imgstyle" src="logo-enem.png" alt="Logo do ENEM" title="Logo do ENEM">
     <br>
-    <div class="title">
-        <h1>Sua média</h1>
-    </div>
-    <div class="subt">
-        <p>Sua média de pontos no ENEM está boa em relação à nota de corte do curso desejado?</p>
-    </div>
-    <!--p class="publi">Conheça também nossos resumos para facilitar seus estudos, clique <a href="https://abokadowell.github.io/ENEM/">aqui</a>!</p>-->
+    <h1>Sua média</h1>
+    <p class="subt">Sua média de pontos no ENEM está boa em relação à nota de corte do curso desejado?</p>
     <div class="botao"><button onclick="media()">Clique aqui para calcular</button></div>
     <br>
     <br>
